--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 		<footer>
     		<ul>
         		<li><a href="mailto:sandeep.singh@dlr.de">email</a></li>
-        		<li><a href="https://github.com/sansastra">github.com/sansastra</a></li>
+        		<!--<li><a href="https://github.com/sansastra">github.com/sansastra</a></li>-->
 			</ul>
 		</footer>
 	</body>
