--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
                             <li>
                               <a href="#service">
                                 <div class="icon icon-time"></div>
-                                <div class="text">Service</div>
+                                <div class="text">Activity</div>
                               </a>
                             </li> 
 
