--- a/index.html
+++ b/index.html
@@ -161,7 +161,7 @@
 					</p>
 					<hr />
 					<p>&nbsp;</p>
-					<p><strong>Curriculum vitae (<a href="resources/CV_Sandeep_Singh_2021.pdf.pdf">pdf</a>)</strong></p>
+					<p><strong>Curriculum vitae (<a href="resources/CV_Sandeep_Singh_2021.pdf">pdf</a>)</strong></p>
 <!--					<p>I am currently seeking tenure-track assistant professor positions at research universities. My goal is to pursue cutting-edge research while also being able to teach and mentor students.</p>
 					<ul>
 					<li>Curriculum vitae (<a href="docs/cv.pdf">pdf</a>)</li>
@@ -851,7 +851,7 @@
 									<a href="#" class="pubcollapse">
 										<i class="icon-zoom-in"></i>
 									</a>
-									<a href=" " class="tooltips" title="External link" target="_blank">
+									<a href="resources/Resource_Allocation_in_Optical_Networks_IITI.pdf" class="tooltips" title="External link" target="_blank">
 										<i class="icon-external-link"></i>
 									</a>
 								</div>
@@ -873,7 +873,7 @@
 									<a href="#" class="pubcollapse">
 										<i class="icon-zoom-in"></i>
 									</a>
-									<a href=" " class="tooltips" title="External link" target="_blank">
+									<a href="resources/ML_in_Communication_Networks_VIT.pdf" class="tooltips" title="External link" target="_blank">
 										<i class="icon-external-link"></i>
 									</a>
 								</div>
