Work experience updated

--- a/index.html
+++ b/index.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
-        <title>Sandeep Kumar Singh | German Aerospace Center (DLR) </title>
+        <title>Sandeep Kumar Singh | UC Davis </title>
         <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
         <meta name="author" content="owwwlab.com">
         <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
-        <meta name="description" content="Homepage of Sandeep Kumar Singh, German Aerospace Center (DLR)" />
-        <meta name="keywords" content="Sandeep Singh, dlr, homepage, iit madras, tu braunschweig" />
+        <meta name="description" content="Homepage of Sandeep Kumar Singh, UC Davis" />
+        <meta name="keywords" content="Sandeep Singh, uc davis, homepage, iit madras, tu braunschweig" />
 
         <link rel="shortcut icon" href="../favicon.ico">
 
@@ -62,7 +62,7 @@
                             <div class="portrate hidden-xs"></div>
                             <div class="title">
                                 <h2>Sandeep Singh</h2>
-                                <h3>German Aerospace Center (DLR)</h3>
+                                <h3>UC Davis, USA</h3>
                             </div>
                         </div>
                         <ul id="navigation">
@@ -153,10 +153,10 @@
                                     <div class="clearfix visible-sm visible-xs"></div>
  -->                                    <div class="col-sm-12 col-md-7">
                                         <h3 class="title">Bio</h3>
-                                        <p>I am currently working as a research scientist at German Aerospace Center (DLR) in the department of Communications and Navigation, in Neustrelitz, Germany. Prior to joining DLR, I completed my Ph.D (summa cum laude)
+                                        <p>I am currently working as a postdoctoral scholar at the deprtment of Electrical and Computer Engineering in the Univeristy of California, Davis, USA. Prior to that I worked as a research scientist at German Aerospace Center (DLR) in the Institute of Communications and Navigation, in Neustrelitz, Germany from 2019 to 2021. I completed my Ph.D (summa cum laude)
 					   in electrical engineering at the Institute of Computer and Network Engineering, TU Braunschweig in 2019 under Prof. Admela Jukan. I received my masters (M.S.)  in
 					   electrical engineering from Indian Institute of Technology Madras, India, in 2014, and bachelor (B. Tech) degree in electronics and communications engineering from SASTRA University, India in 2010. 
-					   My areas of interest include autonomous navigation, resource allocation in optical networks, with a special focus on stochastic analysis and learning methods, and 
+					   My areas of interest include datacenter networking, resource allocation in optical networks, with a special focus on stochastic analysis and learning methods, and 
 					   application of artificial intelligence in communication networks.
 					</p>
 					<hr />
@@ -213,10 +213,18 @@
                                     <h3>Work Experience</h3>
 				    <div class="row spacersmall">
 					  <div class="col-sm-3">
-						July 2019 - present
+						June 2021 - Present
 					  </div>
 					  <div class="col-sm-9">
-						Researcher at German Aerospace Center (DLR) with primarily focus on intelligent maritime navigation.
+						Postdoctoral Scholar at University of California, Davis with primarily focus on datacenter networking.
+					  </div>
+					</div>
+				    <div class="row spacersmall">
+					  <div class="col-sm-3">
+						July 2019 - June 2021
+					  </div>
+					  <div class="col-sm-9">
+						Researcher at German Aerospace Center (DLR), Inst. of Communication and Navigation.
 					  </div>
 					</div>
 					<div class="row spacersmall">
@@ -287,11 +295,20 @@
 					   <p><a href="https://scholar.google.com/citations?user=Xv2O8dgAAAAJ&hl=en">Link to Google Scholar</a></p>
                                     </div>                                   
 				    <div class="col-sm-8">
-						<h4>Intelligent Maritime Navigation</h4>
-						The intelligent maritime navigation tries to improve the integration of various data sources and services into a networked maritime system for the 
-						detection and management of maritime security scenarios	in real time. The aim is to scientifically investigate which methods provide best possible
+						<h4>Datacenter Networking and High Performance Computing Systems</h4>
+						<p>Today's datacenter (DC) and high performance computing (HPC) systems need to support reconfigurable data plane (hardware) and control/management plane (software) 
+						   solutions leveraging the unique benefits of optical interconnect technologies and machine-learning-aided network optimization techniques. 
+						   We work towards designing a novel agile HPC system with low-diameter and application-driven elastic optical bandwidth assignment· 
+						   The goal is to provide a low-latency communication network that can serve today’s and tomorrow’s data-intensive applications that require fast and efficient
+						   data movement tailored to the applications’ communication profile.
+					        </p>
+					    
+					        <h4>Security in Communication and Navigation Systems</h4>
+						<p>The communication and navigation systems need to improve the integration of various data sources and services into a networked system for the 
+						detection and management of security scenarios	in real time. The aim is to scientifically investigate which methods provide best possible
 						results in the field of Autonomous Identification System (AIS) and remote sensing data in the detection of anomalies.
-
+						</p> 
+					    
 						<h4>Resource Allocation in Optical Networks</h4>
 						<p>The efficient allocation of optical resources is challenging with the elastic optical networks (EONs), 
 						as setup and tear down of non-uniform bandwidth requests fragments spectrum in spectral, time and spatial dimensions. 
