--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
         <meta name="author" content="owwwlab.com">
         <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
         <meta name="description" content="Homepage of Sandeep Kumar Singh, UC Davis" />
-        <meta name="keywords" content="Sandeep Singh, uc davis, homepage, iit madras, tu braunschweig" />
+        <meta name="keywords" content="Sandeep Singh, uc davis, dlr, homepage, iit madras, tu braunschweig" />
 
         <link rel="shortcut icon" href="../favicon.ico">
 
@@ -153,7 +153,8 @@
                                     <div class="clearfix visible-sm visible-xs"></div>
  -->                                    <div class="col-sm-12 col-md-7">
                                         <h3 class="title">Bio</h3>
-                                        <p>I am currently working as a postdoctoral scholar at the deprtment of Electrical and Computer Engineering in the Univeristy of California, Davis, USA. Prior to that I worked as a research scientist at German Aerospace Center (DLR) in the Institute of Communications and Navigation, in Neustrelitz, Germany from 2019 to 2021. I completed my Ph.D (summa cum laude)
+                                        <p>I am currently working as a postdoctoral scholar at the Next Generation Networking and Computing systems group headed by Prof. S. J. Ben Yoo, deprtment of Electrical and Computer Engineering in the University of California, Davis, USA. 
+					   Prior to that I worked as a research scientist at German Aerospace Center (DLR) in the Institute of Communications and Navigation, in Neustrelitz, Germany from 2019 to 2021. I completed my Ph.D (summa cum laude)
 					   in electrical engineering at the Institute of Computer and Network Engineering, TU Braunschweig in 2019 under Prof. Admela Jukan. I received my masters (M.S.)  in
 					   electrical engineering from Indian Institute of Technology Madras, India, in 2014, and bachelor (B. Tech) degree in electronics and communications engineering from SASTRA University, India in 2010. 
 					   My areas of interest include datacenter networking, resource allocation in optical networks, with a special focus on stochastic analysis and learning methods, and 
@@ -224,7 +225,7 @@
 						July 2019 - June 2021
 					  </div>
 					  <div class="col-sm-9">
-						Researcher at German Aerospace Center (DLR), Inst. of Communication and Navigation.
+						Researcher at German Aerospace Center (DLR), Inst. of Communications and Navigation, Germany.
 					  </div>
 					</div>
 					<div class="row spacersmall">
@@ -290,7 +291,7 @@
                             
                                 <div class="row">
                                     <div class="col-md-8">
-                                        <p>My research largely involves intelligent navigation, theoretical and algorithmic design and analysis of network resource allocation,
+                                        <p>My research largely involves datacenter networking, theoretical and algorithmic design and analysis of network resource allocation,
 					   and  application of artificial intelligence in communication networks.
 					   <p><a href="https://scholar.google.com/citations?user=Xv2O8dgAAAAJ&hl=en">Link to Google Scholar</a></p>
                                     </div>                                   
