--- a/index.html
+++ b/index.html
@@ -969,9 +969,9 @@
  -->                                    <div class="col-md-4">
                                         <ul class="list-unstyled">
                                              <li>
-												<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+						<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
                                                 <strong><i class="glyphicon glyphicon-send"></i>&nbsp;&nbsp;</strong>
-                                                <span><a href="mailto:sandeep.singh@dlr.de">sandeep.singh@dlr.de</a></span>
+                                                <span><a href="mailto:sansingh@ucdavis.edu">sansingh@ucdavis.edu</a></span>
                                             </li>
 <!--                                             <li>
                                                 <strong><i class="icon-phone"></i>&nbsp;&nbsp;</strong>
@@ -979,7 +979,7 @@
                                             </li> -->
                                             <li style="width: 670px;">
                                                 <strong><i class="icon-envelope"></i>&nbsp;&nbsp;</strong>
-                                                <span>German Aerospace Center (DLR), Kalkhorstweg 53, Neustrelitz, 17235, Germany</span>
+                                                <span>University Of California, Davis, California, 95616, United States</span>
                                             </li>
  <!--                                           <li>
                                                 <strong><i class="icon-skype"></i>&nbsp;&nbsp;</strong>
