--- a/index.html
+++ b/index.html
@@ -924,7 +924,7 @@
                                     <div class="row">
                                         <div class="col-md-12">
    
-                                                <p><strong>My Github page:</strong><a href="www.github.com/sansastra">www.github.com/sansastra</a>  </p>
+                                                <p><strong>My Github page:</strong><a href="https://github.com/sansastra">https://github.com/sansastra</a>  </p>
 						
 						<p><strong>Reviewer for:</strong>
 						   <ul>
