Updated research projects

--- a/index.html
+++ b/index.html
@@ -304,6 +304,16 @@
 						   data movement tailored to the applications’ communication profile.
 					        </p>
 					    
+					        <h4>Quantum Wrapper Networking</h4>
+						<p>Classical Internet employs buffering, switching, and routing functionality to send information over thousands of kilometers of under-sea fiber-optical cables, 
+						   while exposing the data to attackers. Quantum networks provide an alternative paradigm where data can be encoded into photonic degrees of freedom, e. g., polarization, 
+						   and transmitted as entangled (correlated) photons. This secures quantum bits (qubits) from attackers due to its properties, such as qubits cannot be amplified,
+						   duplicated or measured without altering them. However, the future quantum networks need to imitate the functionality of classical Internet, which is challenging. 
+						   We are developing a quantum wrapper (QW) protocol, which wraps a quantum payload, i.e., actual information, into a header carrying routing information. 
+						  The header and payload are transmitted separately in time or frequency without affecting the data. This will ensure that the QW protocol can incorporate today’s
+						  networking protocols and coexist with classical network. 
+					        </p>
+					    
 					        <h4>Security in Communication and Navigation Systems</h4>
 						<p>The communication and navigation systems need to improve the integration of various data sources and services into a networked system for the 
 						detection and management of security scenarios	in real time. The aim is to scientifically investigate which methods provide best possible
