--- a/index.html
+++ b/index.html
@@ -153,17 +153,19 @@
                                     <div class="clearfix visible-sm visible-xs"></div>
  -->                                    <div class="col-sm-12 col-md-7">
                                         <h3 class="title">Bio</h3>
-                                        <p>I am currently working as a postdoctoral researcher at the Next Generation Networking and Computing Systems group headed by Prof. S. J. Ben Yoo in the deprtment of Electrical and Computer Engineering in the University of California, Davis, USA. 
-					   Prior to that I worked as a research scientist at the German Aerospace Center (DLR) in the Institute of Communications and Navigation, Neustrelitz, Germany from 2019 to 2021. I completed my Ph.D degree with highest honor (summa cum laude)
+                                        <p>I am an Assistant Professor in the Department of Electronics and Communication Engineering at the Indian Institute of Technology, Roorkee, India.
+					   Prior to that, I was a postdoctoral researcher at the University of California, Davis, USA from 2021 to 2023. 
+					   I worked as a research scientist at the German Aerospace Center (DLR) in the Institute of Communications and Navigation, Neustrelitz, Germany from 2019 to 2021. I completed my Ph.D degree with highest honor (summa cum laude)
 					   in Electrical Engineering from the Institute of Computer and Network Engineering, TU Braunschweig in 2019 under Prof. Admela Jukan. I received my master's (M.S.) degree in
-					   Electrical Engineering from the Indian Institute of Technology Madras, India, in 2014, and bachelor (B. Tech) degree in Electronics and Communications Engineering from SASTRA University, India in 2010. 
-					   My areas of interest include quantum networking, datacenter networking, resource allocation in optical networks, with a special focus on stochastic analysis and learning methods, and 
+					   Electrical Engineering from the Indian Institute of Technology Madras, India, in 2014, and a bachelor (B. Tech) degree in Electronics and Communications Engineering from SASTRA University, India in 2010. 
+					   My areas of interest include quantum networking, datacenter networking, TeraHertz communication, resource allocation in optical networks, with a special focus on stochastic analysis and learning methods, and 
 					   application of artificial intelligence in communication networks.
 					</p>
 					<hr />
 					<p>&nbsp;</p>
 					<p><strong>Curriculum vitae (<a href="resources/CV_Sandeep_Singh_2022.pdf">pdf</a>)</strong></p>
-<!--					<p>I am currently seeking tenure-track assistant professor positions at research universities. My goal is to pursue cutting-edge research while also being able to teach and mentor students.</p>
+<!--					<p>I am currently seeking motivated Ph.D. and research students at IIT Roorkee. Please feel free to contact me over my email "Sandeep.Singh@ece.iitr.ac.in".
+	                                   My goal is to pursue cutting-edge research while also being able to teach and mentor students.</p>
 					<ul>
 					<li>Curriculum vitae (<a href="docs/cv.pdf">pdf</a>)</li>
 					<li>Research statement (<a href="docs/rs.pdf">pdf</a>)</li>
@@ -214,10 +216,18 @@
                                     <h3>Work Experience</h3>
 				    <div class="row spacersmall">
 					  <div class="col-sm-3">
-						June 2021 - Present
+						June 2023 - Present
 					  </div>
 					  <div class="col-sm-9">
-						Postdoctoral Researcher at University of California, Davis with primarily focus on quantum and datacenter networking.
+						Assistant Professor, Electronics and Communication Engineering, Indian Institute of Technology, Roorkee, India. 
+					  </div>
+					</div>
+				    <div class="row spacersmall">
+					  <div class="col-sm-3">
+						June 2021 - May 2023
+					  </div>
+					  <div class="col-sm-9">
+						Postdoctoral Researcher at the University of California, Davis, CA, USA.
 					  </div>
 					</div>
 				    <div class="row spacersmall">
@@ -225,7 +235,7 @@
 						July 2019 - June 2021
 					  </div>
 					  <div class="col-sm-9">
-						Researcher at German Aerospace Center (DLR), Institute of Communications and Navigation, Germany.
+						Researcher at German Aerospace Center (DLR), Institute of Communications and Navigation, Neustrelitz, Germany.
 					  </div>
 					</div>
 					<div class="row spacersmall">
@@ -251,12 +261,20 @@
                             <div class="section-container">
                                 <div class="row">
                                     <h3>Teaching Experience</h3>
+				     <div class="row spacersmall">
+					  <div class="col-sm-3">
+						2021-22
+					  </div>
+					  <div class="col-sm-9">
+						High Speed Data Communication, University of California, Davis, CA, USA.  
+					  </div>
+					</div>
 				    <div class="row spacersmall">
 					  <div class="col-sm-3">
 						2015-18
 					  </div>
 					  <div class="col-sm-9">
-						Advance topics in telecommunications, IT for social good, Queuing theory.  
+						Advance topics in telecommunications, IT for social good, Queuing theory; TU Braunschweig, Germany.  
 					  </div>
 					</div>
 					<div class="row spacersmall">
